# qap-thesis

./: .gitignore  README.md  pyproject.toml
experiments/experiment_1/: create_data_list.py  get_data_list.py  get_missing_results.py  main_experiment_1.py  variance_test_experiment_1.py
results/preliminary_tests/: output_2024-06-03_14-22_r1.txt  output_2024-06-03_14-22_r1_callback_info.csv  output_2024-06-03_14-22_r1_cut_info.csv  output_2024-06-03_14-23_r1.txt
src/: checker.py  data_handler.py  disjunctive_programming.py  kaufman_broeckx.py  main.py  my_secrets.py  reformulation_linearization_technique.py  settings.py  writing_tools.py
visualizations/scripts/: how_to_visualize.md  prepare_results.ipynb  process_results.py  visualize_exp_1.ipynb  visualize_preliminary_tests.ipynb
