[tool.poetry]
name = "qap-thesis"
version = "0.1.0"
description = ""
authors = ["David-van-der-Linden <61505634+David-van-der-Linden@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.1"
numpy = "1.26.4"
gurobipy = "11.0.2"
pandas = "2.2.2"
jupyter = "1.0.0"
jinja2 = "3.1.4"
matplotlib = "3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
